[package]
name = "xdd_tray"
version = "0.0.1"
edition = "2021"

[lib]
name = "xdd_tray"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.nexus-rs]
git = "https://github.com/belst/raidcore_bindings-rs.git"
version = "0.1.0"
